--- a/Styles/stylePag2.css
+++ b/Styles/stylePag2.css
@@ -103,6 +103,12 @@ th {
     cursor: pointer;
 }
 
+.cat-container {
+    display: flex;
+    justify-content: center;
+}
+
+
 .cat-image:hover {
     transform: scale(1.05);
 }
